--- a/FRONTEND/app/src/index.css
+++ b/FRONTEND/app/src/index.css
@@ -1,23 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-:root {
-  --primary-color: #ffffff;
-  --secondary-color: #7d7d7d;
-  --tertiary-color: #00000044;
-  --background-color: #242424;
-  --text-color: #ffffff;
-  --link-color: #ffffff;
-}
-
-body {
-  font-family: "Roboto", sans-serif;
-  background-color: var(--background-color);
-  a:hover {
-    text-decoration: underline;
-    color: #5e5e5e;
-  }
-}
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
