--- a/FRONTEND/app/src/components/SignIn/SignIn.css
+++ b/FRONTEND/app/src/components/SignIn/SignIn.css
@@ -1,6 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 html {
     scroll-behavior: smooth;
@@ -97,6 +94,10 @@ html {
     color: rgba(255, 255, 255, 0.555);
   
     height: 35px;
+    width: 300px;
+  }
+
+  .btn-outline{
     width: 300px;
   }
   
